box sizes, overflow fix
changing box sizes to fit screen better, overflow fix on cloudbox caused by login screen changes

--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -1,7 +1,3 @@
-body {
-    overflow-y: hidden
-}
-
 .background-video {
   width: 100%;
   height: 100%;
